fix(console): add letter spacing for sign-in-experience title (#1033)

--- a/packages/console/src/pages/GetStarted/components/GetStartedProgress/index.module.scss
+++ b/packages/console/src/pages/GetStarted/components/GetStartedProgress/index.module.scss
@@ -27,10 +27,8 @@
 }
 
 .dropdownTitle {
+  @include _.subhead-cap;
   padding: _.unit(5) _.unit(5) _.unit(3) _.unit(4);
-  font: var(--font-subhead-cap);
-  text-transform: uppercase;
-  letter-spacing: 0.1em;
 }
 
 .dropdown {
